# TestMedApp

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.androidide/editor/: openedFiles.json  openedFiles.json.bak
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mral/: LocationHelper.kt
app/src/main/java/com/mral/geektest/: MainActivity.kt
app/src/main/java/com/mral/geektest/model/: Medication.kt  MedicationRepository.kt
app/src/main/java/com/mral/geektest/ui/medication/: AddMedicationForm.kt  AddMedicationScreen.kt  MedicationListScreen.kt  MedicationScreen.kt
app/src/main/java/com/mral/geektest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
backend-rust/: Cargo.toml  points.geojson
backend-rust/folder/: main.rs.txt
backend-rust/src/: main.rs
go-bus-tracker/: go.mod  main.go
server/: package.json  server.js
